--- a/index.html
+++ b/index.html
@@ -7,33 +7,80 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+    <!-- Ekko lightbox for image gallery -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
     <!-- Custom Style -->
     <link rel="stylesheet" href="public/assets/css/style.css">
+
+
     <title>Giphy Search</title>
 
   </head>
   <body>
     <div class="container">
-        <h1 class="text-center">Giphy Seach</h1>
-        <div class="giphy-wrapper">
-            <div class="search-wrapper">
-
-            </div>
-            <div class="cards-wrapper">
-
+        <div class="gliphyapp">
+            <h1 class="title text-center">Giphy Seach</h1>
+            <div class="giphy-wrapper">
+                <div class="search-wrapper">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search this blog">
+                        <div class="input-group-append">
+                          <button class="btn btn-secondary" type="button">
+                            <i class="fa fa-search"></i>
+                          </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="images-wrapper">
+                    <div class="row">
+                        <div class="card">
+                            <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="gallery">
+                                <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid rounded">
+                            </a>
+                        </div>
+                        <div class="card">
+                            <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="gallery">
+                                <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid rounded">
+                            </a>
+                        </div>
+                        <div class="card">
+                            <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="gallery">
+                                <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid rounded">
+                            </a>
+                        </div>
+                        <div class="card">
+                            <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="gallery">
+                                <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid rounded">
+                            </a>
+                        </div>
+                        <div class="card">
+                            <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="gallery">
+                                <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid rounded">
+                            </a>
+                        </div>
+                    </div>    
+                </div>
             </div>
         </div>
     </div>
-
-
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+    <!-- ekko-lightbox for the image gallery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
+
+
+
+
     <!-- Custom Scripts  -->
     <script src="public/assets/js/main.js"></script>
+
+
   </body>
 </html>
