--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div class="giphy-wrapper">
                 <div class="search-wrapper">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search this blog">
+                        <input type="text" class="search-giphy form-control" placeholder="Search this blog">
                         <div class="input-group-append">
-                          <button class="btn btn-secondary" type="button">
+                          <button class="btn btn-secondary search-button" type="button">
                             <i class="fa fa-search"></i>
                           </button>
                         </div>
