refact: give clear placeholder message

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="giphy-wrapper">
                 <div class="search-wrapper">
                     <div class="input-group">
-                        <input type="text" class="search-giphy form-control" placeholder="Search this blog">
+                        <input type="text" class="search-giphy form-control" placeholder="type your gif here">
                         <div class="input-group-append">
                             <button class="btn btn-secondary search-button" type="button">
                                 <i class="fa fa-search"></i>
